# vitruvian-cipher

./: .gitignore  README.md
MoldoAndr.github.io/: arhitectura.html  diagram.css  diagram.html  diagram.js  index.css  index.html
articole/: Structura_initiala.md  citations.md  help1.docx
code/: Makefile  docker-compose.yml  run_all.sh
code/GUIDELINES/: ACTIVE_SERVICES.md  BACKEND_SUGGESTIONS.md  CODE_IMPROVEMENTS.md  OPERATIONS_GUIDE.md  ROBUSTNESS_IMPROVEMENTS.md  SECURITY_ENHANCEMENTS.md  SECURITY_FUTURE_ENH.md  TODO_COMMENTED_SERVICES.md
code/agents/: run_all.sh
code/agents/choice_maker/: doc.md  docker-compose.yaml
code/agents/command_executor/: Cargo.toml  Dockerfile  README.md  docker-compose.yml
code/agents/command_executor/src/: config.rs  main.rs  models.rs  openssl.rs  routes.rs  validators.rs
code/agents/command_executor/src/providers/: asymmetric.rs  encoding.rs  hashing.rs  mod.rs  pqc.rs  random.rs  symmetric.rs
code/agents/cryptosystem_god/: IMPROVEMENTS.md  README.md  docker-compose.yml
code/agents/ctf_maliketh/: IMPROVEMENTS.md  ideas.md
code/agents/hash_breaker/: .gitignore  Dockerfile  Dockerfile.cpu  Dockerfile.production  README.md  architecture.md  docker-compose.yml  documentation.md  download.sh  requirements.txt  setup.sh
code/agents/orchestrator/: .dockerignore  Dockerfile  README.md  config.yaml  go.mod  go.sum
code/agents/password_checker/: Doccumentation.md  Dockerfile  README.md  docker-compose.yml
code/agents/prime_checker/: AgentTester.sh  Dockerfile  README.md  app.py  docfile.txt  docker-entrypoint.sh  go.mod  main.go
code/agents/theory_specialist/: Dockerfile  README.md  Software_Details.md  docker-compose.yml  pytest.ini  requirements.txt  suggestion.md  test_api.py
code/interface/cli/: Dockerfile  Makefile  README.md  docker-compose.yml  godlevel_start.py  pyproject.toml  requirements.txt  run.py  setup.py
code/interface/cli/src/agent_cli/: __init__.py  agents.py  api.py  commands.py  completions.py  config.py  main.py  ui.py
code/interface/mock/: index.html  script.js
code/interface/react_interface/: Dockerfile  docker-compose.yml  index.html  package.json  tailwind.config.js
code/scripts/: health-check.sh  service-status.sh  verify-setup.sh
doc/Documentatie/: complete_main.tex
doc/Documentatie_SPRC/: Makefile  bibliography.bib  main.tex
doc/SRS/: .gitignore  idei.md  idei_extra.md  srs_platforma_management.tex  srs_unelte_ai_criptografie.tex
doc/agents_doc/: generate_diagram.sh
logo/: architecture.puml
(+259 files in other folders)
